--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head />
+<html lang="en-GB">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" value="width=device-width, initial-scale=1">
+    <title>🐺 Lone Wolf</title>
+  </head>
   <body>
-    <div id="root"></div>
+    <main id="root"></main>
   </body>
 </html>
