Improve main screen style

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,7 @@
     <title>🐺 Lone Wolf</title>
   </head>
   <body>
-    <main id="root"></main>
+    <main id="app-root"></main>
+    <div id="modal-root"></div>
   </body>
 </html>
